...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvMovieItem"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp"
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp">

            <ImageView
                android:id="@+id/ivThumbImage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_movie"
                android:transitionName="@string/transition_poster"/>

...
