...
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/md_white_1000"
        android:id="@+id/cvSearch"
       >
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_search"
...
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:layout_marginTop="8dp"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>

